--- a/.github/workflows/faster-ci.yml
+++ b/.github/workflows/faster-ci.yml
@@ -36,7 +36,7 @@ jobs:
           echo "::set-output name=branch::${EXPORT_VALUE}"
 
   Linux:
-    name: Test application (Linux)
+    name: Build, install and test (Linux)
     runs-on: ubuntu-latest
     needs: [pre-ci]
     outputs:
@@ -100,7 +100,7 @@ jobs:
         shell: bash
 
   MacOS:
-    name: Test application (MacOS)
+    name: Build, install and test (MacOS)
     runs-on: macos-latest
     needs: [pre-ci]
     outputs:
@@ -163,7 +163,7 @@ jobs:
         shell: bash
 
   Windows:
-    name: Test application (Windows)
+    name: Build, install and test (Windows)
     runs-on: windows-latest
     needs: [pre-ci]
     outputs:
@@ -193,7 +193,7 @@ jobs:
 
       - name: CMake Install
         id: cmake-install
-        run: sudo cmake --install ./build
+        run: cmake --install ./build
         shell: bash
 
       - name: Upload installation artifacts
