--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 # action originating from CMake action
-name: CI
+name: Faster-CI
 
 on:
   push:
@@ -19,365 +19,30 @@ jobs:
       branch: ${{ steps.extract_branch.outputs.branch }}
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Extract branch name
-      id: extract_branch
-      shell: bash
-      run: |
-        TMP_PULL_HEAD_REF="${{ github.head_ref }}"
-        TMP_GITHUB_REF="${GITHUB_REF#refs/heads/}"
-        EXPORT_VALUE=""
-        if [ "${TMP_PULL_HEAD_REF}" != "" ]
-        then
-            EXPORT_VALUE="${TMP_PULL_HEAD_REF}"
-        else
-            EXPORT_VALUE="${TMP_GITHUB_REF}"
-        fi
-        echo "::set-output name=branch::${EXPORT_VALUE}"
+      - uses: actions/checkout@v3
+      - name: Extract branch name
+        id: extract_branch
+        shell: bash
+        run: |
+          TMP_PULL_HEAD_REF="${{ github.head_ref }}"
+          TMP_GITHUB_REF="${GITHUB_REF#refs/heads/}"
+          EXPORT_VALUE=""
+          if [ "${TMP_PULL_HEAD_REF}" != "" ]
+          then
+              EXPORT_VALUE="${TMP_PULL_HEAD_REF}"
+          else
+              EXPORT_VALUE="${TMP_GITHUB_REF}"
+          fi
+          echo "::set-output name=branch::${EXPORT_VALUE}"
 
-  configure-MacOS:
-    name: Configure Easea (MacOS)
-    runs-on: macos-latest
-    needs: [pre-ci]
-    outputs:
-      status: ${{ steps.status.outputs.status }}
-
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Installing dependencies if needed
-      shell: bash
-      run: |
-        brew install bison libomp boost
-        export PATH="$(brew --prefix bison)/bin:$PATH"
-
-    - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-      shell: bash
-
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: build-configured-MacOS
-        path: ${{github.workspace}}/build
-
-    - name: Save status
-      if: ${{ always() }}
-      id: status
-      run: echo "::set-output name=status::${{ job.status }}"
-      shell: bash
-
-  configure-Windows:
-    name: Configure Easea (Windows)
-    runs-on: windows-latest
-    needs: [pre-ci]
-    outputs:
-      status: ${{ steps.status.outputs.status }}
-
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Installing dependencies if needed
-      run: choco install winflexbison3 boost-msvc-14.3
-      shell: bash
-
-    - name: Configure CMake
-      run: cmake -B ./build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-      shell: bash
-
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: build-configured-Windows
-        path: ./build
-
-
-  configure-Linux:
-    name: Configure Easea (Linux)
+  Linux:
+    name: Build, install and test (Linux)
     runs-on: ubuntu-latest
     needs: [pre-ci]
     outputs:
-      status: ${{ steps.status.outputs.status }}
-
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Installing dependencies if needed
-      shell: bash
-      run: |
-        sudo apt install -y libboost-all-dev
-
-    - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-      shell: bash
-
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: build-configured-Linux
-        path: ${{github.workspace}}/build
-
-    - name: Save status
-      if: ${{ always() }}
-      id: status
-      run: echo "::set-output name=status::${{ job.status }}"
-      shell: bash
-
-  build-Linux:
-    name: Build Easea (Linux)
-    runs-on: ubuntu-latest
-    needs: [configure-Linux]
-    outputs:
-      status: ${{ steps.status.outputs.status }}
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Installing dependencies if needed
-        shell: bash
-        run: |
-          sudo apt install -y libboost-all-dev
-
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: build-configured-Linux
-          path: ${{github.workspace}}/build
-
-      - name: Generating configuration
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-        shell: bash
-
-      - name: Building easea
-        id: build
-        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-        shell: bash
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: built-Linux
-          path: ${{github.workspace}}/build
-
-      - name: Save status
-        if: ${{ always() }}
-        id: status
-        run: echo "::set-output name=status::${{ job.status }}"
-        shell: bash
-
-  build-Windows:
-    name: Build Easea (Windows)
-    runs-on: windows-latest
-    needs: [configure-Windows]
-    outputs:
-      status: ${{ steps.status.outputs.status }}
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: build-configured-Windows
-          path: ./build
-
-      - name: Installing dependencies if needed
-        run: choco install winflexbison3 boost-msvc-14.3
-        shell: bash
-
-      - name: Configure CMake
-        run: cmake -B ./build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-        shell: bash
-
-      - name: Building easea
-        id: build
-        run: cmake --build ./build --config ${{env.BUILD_TYPE}}
-        shell: bash
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: built-Windows
-          path: ${{github.workspace}}/build
-
-      - name: Save status
-        if: ${{ always() }}
-        id: status
-        run: echo "::set-output name=status::${{ job.status }}"
-        shell: bash
-
-  build-MacOS:
-    name: Build Easea (MacOS)
-    runs-on: macos-latest
-    needs: [configure-MacOS]
-    outputs:
-      status: ${{ steps.status.outputs.status }}
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Installing dependencies if needed
-        shell: bash
-        run: |
-          brew install bison libomp boost
-          export PATH="$(brew --prefix bison)/bin:$PATH"
-
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: build-configured-MacOS
-          path: ${{github.workspace}}/build
-
-      - name: Generating configuration
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-        shell: bash
-
-      - name: Building easea
-        id: build
-        run: VERBOSE=1 cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-        shell: bash
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: built-MacOS
-          path: ${{github.workspace}}/build
-
-      - name: Save status
-        if: ${{ always() }}
-        id: status
-        run: echo "::set-output name=status::${{ job.status }}"
-        shell: bash
-
-  install-Linux:
-    name: Install Easea (Linux)
-    runs-on: ubuntu-latest
-    needs: [build-Linux]
-    outputs:
-      status: ${{ steps.status.outputs.status }}
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Installing dependencies if needed
-        shell: bash
-        run: |
-          sudo apt install -y libboost-all-dev
-
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: built-Linux
-          path: ${{github.workspace}}/build
-
-      - name: Generating configuration
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-        shell: bash
-
-      - name: Install
-        run: sudo cmake --install ${{github.workspace}}/build
-        shell: bash
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: installed-Linux
-          path: /usr/local/easena
-
-      - name: Save status
-        if: ${{ always() }}
-        id: status
-        run: echo "::set-output name=status::${{ job.status }}"
-        shell: bash
-
-  install-MacOS:
-    name: Install Easea (MacOS)
-    runs-on: macos-latest
-    needs: [build-MacOS]
-    outputs:
-      status: ${{ steps.status.outputs.status }}
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Installing dependencies if needed
-        shell: bash
-        run: |
-          brew install bison libomp boost
-          export PATH="$(brew --prefix bison)/bin:$PATH"
-
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: built-MacOS
-          path: ${{github.workspace}}/build
-
-      - name: Generating configuration
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-        shell: bash
-
-      - name: Install
-        run: sudo cmake --install ${{github.workspace}}/build
-        shell: bash
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: installed-MacOS
-          path: /usr/local/easena
-
-      - name: Save status
-        if: ${{ always() }}
-        id: status
-        run: echo "::set-output name=status::${{ job.status }}"
-        shell: bash
-
-  install-Windows:
-    name: Install Easea (Windows)
-    runs-on: windows-latest
-    needs: [build-Windows]
-    outputs:
-      status: ${{ steps.status.outputs.status }}
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Installing dependencies if needed
-        run: choco install winflexbison3 boost-msvc-14.3
-        shell: bash
-
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: built-Windows
-          path: ./build
-
-      - name: Generating configuration
-        run: cmake -B ./build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-        shell: bash
-
-      - name: Install
-        run: cmake --install ./build
-        shell: bash
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: installed-Windows
-          path: C:/Program Files (x86)/EASENA/
-
-      - name: Save status
-        if: ${{ always() }}
-        id: status
-        run: echo "::set-output name=status::${{ job.status }}"
-        shell: bash
-
-
-  test-Linux:
-    name: Test Easea (Linux)
-    runs-on: ubuntu-latest
-    needs: [install-Linux]
-    outputs:
+      configure: ${{ steps.cmake-configure.outcome }}
+      build: ${{ steps.cmake-build.outcome }}
+      install: ${{ steps.cmake-install.outcome }}
       total: ${{ steps.status.outputs.total }}
       passed: ${{ steps.status.outputs.passed }}
       failed: ${{ steps.status.outputs.failed }}
@@ -385,31 +50,34 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Installing dependencies if needed
-        shell: bash
-        run: |
-          sudo apt install -y libboost-all-dev
-
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: built-Linux
-          path: ${{github.workspace}}/build
-
-      - name: Generating configuration
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-        shell: bash
-
-      - name: Installing easea
-        run: sudo cmake --install ${{github.workspace}}/build
-        shell: bash
-
-      - run: ls -al /usr/local/easena/
+      - name: Installing dependencies
+        run: sudo apt install -y libboost-all-dev
 
       - name: Installing CUDA toolkit
         uses: Jimver/cuda-toolkit@v0.2.7
         with:
           cuda: '11.7.0'
+
+      - name: CMake configure
+        id: cmake-configure
+        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        shell: bash
+
+      - name: CMake build
+        id: cmake-build
+        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+        shell: bash
+
+      - name: CMake Install
+        id: cmake-install
+        run: sudo cmake --install ${{github.workspace}}/build
+        shell: bash
+
+      - name: Upload installation artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: installed-Linux
+          path: /usr/local/easena
 
       - name: Build examples
         run: |
@@ -417,7 +85,7 @@ jobs:
           result_code=${PIPESTATUS[0]}
           exit $result_code
         shell: bash
-
+      
       - name: Output examples status
         id: status
         if: ${{ always() }}
@@ -431,11 +99,14 @@ jobs:
           echo "::set-output name=failed::${FAILED}"
         shell: bash
 
-  test-MacOS:
-    name: Test Easea (MacOS)
+  MacOS:
+    name: Build, install and test (MacOS)
     runs-on: macos-latest
-    needs: [install-Macos]
+    needs: [pre-ci]
     outputs:
+      configure: ${{ steps.cmake-configure.outcome }}
+      build: ${{ steps.cmake-build.outcome }}
+      install: ${{ steps.cmake-install.outcome }}
       total: ${{ steps.status.outputs.total }}
       passed: ${{ steps.status.outputs.passed }}
       failed: ${{ steps.status.outputs.failed }}
@@ -443,34 +114,41 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Installing dependencies if needed
+      - name: Installing dependencies
         shell: bash
         run: |
           brew install bison libomp coreutils boost gnu-sed
           export PATH="$(brew --prefix bison)/bin:$PATH"
           export PATH="$(brew --prefix)/opt/gnu-sed/libexec/gnubin:$PATH"
 
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: built-MacOS
-          path: ${{github.workspace}}/build
-
-      - name: Generating configuration
+      - name: CMake configure
+        id: cmake-configure
         run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
         shell: bash
 
-      - name: Installing easea
+      - name: CMake build
+        id: cmake-build
+        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+        shell: bash
+
+      - name: CMake Install
+        id: cmake-install
         run: sudo cmake --install ${{github.workspace}}/build
         shell: bash
 
+      - name: Upload installation artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: installed-MacOS
+          path: /usr/local/easena
+
       - name: Build examples
         run: |
-          EZ_PATH=/usr/local/easena/ bash ${{github.workspace}}/examples/build-all.sh "/usr/local/easena/bin/easena" --no-cuda | tee examples.output
+          EZ_PATH=/usr/local/easena/ bash ${{github.workspace}}/examples/build-all.sh "/usr/local/easena/bin/easena" | tee examples.output
           result_code=${PIPESTATUS[0]}
           exit $result_code
         shell: bash
-
+      
       - name: Output examples status
         id: status
         if: ${{ always() }}
@@ -484,11 +162,14 @@ jobs:
           echo "::set-output name=failed::${FAILED}"
         shell: bash
 
-  test-Windows:
-    name: Test Easea (Windows)
+  Windows:
+    name: Build, install and test (Windows)
     runs-on: windows-latest
-    needs: [install-Windows]
+    needs: [pre-ci]
     outputs:
+      configure: ${{ steps.cmake-configure.outcome }}
+      build: ${{ steps.cmake-build.outcome }}
+      install: ${{ steps.cmake-install.outcome }}
       total: ${{ steps.status.outputs.total }}
       passed: ${{ steps.status.outputs.passed }}
       failed: ${{ steps.status.outputs.failed }}
@@ -496,27 +177,34 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Installing dependencies if needed
+      - name: Installing dependencies
         run: choco install winflexbison3 boost-msvc-14.3 sed
         shell: bash
 
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: built-Windows
-          path: ./build
-
-      - name: Generating configuration
+      - name: CMake configure
+        id: cmake-configure
         run: cmake -B ./build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
         shell: bash
 
-      - name: Installing easea
+      - name: CMake build
+        id: cmake-build
+        run: cmake --build ./build --config ${{env.BUILD_TYPE}}
+        shell: bash
+
+      - name: CMake Install
+        id: cmake-install
         run: cmake --install ./build
         shell: bash
 
+      - name: Upload installation artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: installed-Windows
+          path: C:/Program Files (x86)/EASENA/
+
       - name: Build examples
         run: |
-          EZ_PATH="C:/Program Files (x86)/EASENA/" bash ${{github.workspace}}/examples/build-all.sh "C:/Program Files (x86)/EASENA/bin/easena.exe" --no-cuda | tee examples.output
+          EZ_PATH="C:/Program Files (x86)/EASENA/" bash ./examples/build-all.sh "C:/Program Files (x86)/EASENA/bin/easena.exe" --no-cuda | tee examples.output
           result_code=${PIPESTATUS[0]}
           exit $result_code
         shell: bash
@@ -533,6 +221,7 @@ jobs:
           echo "::set-output name=passed::${PASSED}"
           echo "::set-output name=failed::${FAILED}"
         shell: bash
+
 
           # badges:
           #   runs-on: ubuntu-latest
