--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,12 +51,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Installing dependencies
-        run: sudo apt install -y libboost-all-dev
-
-      - name: Installing CUDA toolkit
-        uses: Jimver/cuda-toolkit@v0.2.7
-        with:
-          cuda: '11.7.0'
+        run: sudo apt install -y libboost-all-dev nvidia-cuda-toolkit
 
       - name: CMake configure
         id: cmake-configure
