--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -173,8 +173,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Installing dependencies
-        run: choco install winflexbison3 boost-msvc-14.3 sed
+        run: choco install winflexbison3 sed
         shell: bash
+
+      - name: Installing Boost 1.79
+        run: choco install boost-msvc-14.3 --version 1.79.0
 
       - name: CMake configure
         id: cmake-configure
