--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,7 +112,7 @@ jobs:
       - name: Installing dependencies
         shell: bash
         run: |
-          brew install bison libomp coreutils boost gnu-sed
+          brew install bison libomp coreutils boost gnu-sed cmake
           export PATH="$(brew --prefix bison)/bin:$PATH"
           export PATH="$(brew --prefix)/opt/gnu-sed/libexec/gnubin:$PATH"
 
