More fixes for AppleClang

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,6 +105,17 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/third_party/cxxopts)
 option(USE_OPENMP "If available, use OpenMP for parallelization." ON)
 
 if (USE_OPENMP)
+	if (CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
+		set(OpenMP_C "${CMAKE_C_COMPILER}")
+		set(OpenMP_C_FLAGS "-Xclang -fopenmp") #-I/usr/local/Cellar/libomp/14.0.0/include")
+		set(OpenMP_C_LIB_NAMES "libomp")
+		set(OpenMP_libomp_LIBRARY "omp")
+
+		set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
+		set(OpenMP_CXX_FLAGS "-Xclang -fopenmp")# -I/usr/local/Cellar/libomp/14.0.0/include")
+		set(OpenMP_CXX_LIB_NAMES "libomp")
+		set(OpenMP_libomp_LIBRARY "omp")
+	endif()
 	find_package(OpenMP REQUIRED)
 endif ()
 if (OpenMP_CXX_FOUND)
