More OpenMP for MacOS fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,21 +106,28 @@ option(USE_OPENMP "If available, use OpenMP for parallelization." ON)
 
 if (USE_OPENMP)
 	if (CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
-		set(OpenMP_C "${CMAKE_C_COMPILER}")
-		set(OpenMP_C_FLAGS "-Xclang -fopenmp") #-I/usr/local/Cellar/libomp/14.0.0/include")
-		set(OpenMP_C_LIB_NAMES "libomp")
-		set(OpenMP_libomp_LIBRARY "omp")
+		find_package(OpenMP)
+		if (NOT OpenMP_CXX_FOUND)
+			message(WARNING "OpenMP detection can struggle with MacOS. Fix attempts")
+			set(OpenMP_C "${CMAKE_C_COMPILER}")
+			set(OpenMP_C_FLAGS "-Xclang -fopenmp") #-I/usr/local/Cellar/libomp/14.0.0/include")
+			set(OpenMP_C_LIB_NAMES "libomp")
+			set(OpenMP_libomp_LIBRARY "omp")
 
-		set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
-		set(OpenMP_CXX_FLAGS "-Xclang -fopenmp")# -I/usr/local/Cellar/libomp/14.0.0/include")
-		set(OpenMP_CXX_LIB_NAMES "libomp")
-		set(OpenMP_libomp_LIBRARY "omp")
+			set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
+			set(OpenMP_CXX_FLAGS "-Xclang -fopenmp")# -I/usr/local/Cellar/libomp/14.0.0/include")
+			set(OpenMP_CXX_LIB_NAMES "libomp")
+			set(OpenMP_libomp_LIBRARY "omp")
+		endif()
 	endif()
 	find_package(OpenMP REQUIRED)
 endif ()
 if (OpenMP_CXX_FOUND)
 	target_link_libraries(libeasea PUBLIC OpenMP::OpenMP_CXX)
 	target_link_libraries(libeasna PUBLIC OpenMP::OpenMP_CXX)
+	if (CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
+		target_include_directories(libeasea PUBLIC OpenMP_CXX_INCLUDE_DIR)
+	endif()
 else ()
   	# Disable warnings for all the unknown OpenMP pragmas.
   	target_compile_options(libeasna $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wno-unknown-pragmas>)
