--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,14 +108,14 @@ if (USE_OPENMP)
 	if (CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
 		find_package(OpenMP)
 		if (NOT OpenMP_CXX_FOUND)
-			message(WARNING "OpenMP detection can struggle with MacOS. Fix attempts")
+			message(WARNING "OpenMP detection can struggle with MacOS. This script will try to fix this.")
 			set(OpenMP_C "${CMAKE_C_COMPILER}")
-			set(OpenMP_C_FLAGS "-Xclang -fopenmp") #-I/usr/local/Cellar/libomp/14.0.0/include")
+			set(OpenMP_C_FLAGS "-Xclang -fopenmp -I/opt/homebrew/opt/libomp/include")
 			set(OpenMP_C_LIB_NAMES "libomp")
 			set(OpenMP_libomp_LIBRARY "omp")
 
 			set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
-			set(OpenMP_CXX_FLAGS "-Xclang -fopenmp")# -I/usr/local/Cellar/libomp/14.0.0/include")
+			set(OpenMP_CXX_FLAGS "-Xclang -fopenmp -I/opt/homebrew/opt/libomp/include")
 			set(OpenMP_CXX_LIB_NAMES "libomp")
 			set(OpenMP_libomp_LIBRARY "omp")
 		endif()
