--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,6 +115,8 @@ jobs:
           brew install bison libomp coreutils boost gnu-sed cmake
           export PATH="$(brew --prefix bison)/bin:$PATH"
           export PATH="$(brew --prefix)/opt/gnu-sed/libexec/gnubin:$PATH"
+          find /usr/local -xdev -name 'omp.h'
+          find /opt/homebrew -xdev -name 'omp.h'
 
       - name: CMake configure
         id: cmake-configure
