--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,12 +110,12 @@ if (USE_OPENMP)
 		if (NOT OpenMP_CXX_FOUND)
 			message(WARNING "OpenMP detection can struggle with MacOS. This script will try to fix this.")
 			set(OpenMP_C "${CMAKE_C_COMPILER}")
-			set(OpenMP_C_FLAGS "-Xclang -fopenmp -I/opt/homebrew/opt/libomp/include")
+			set(OpenMP_C_FLAGS "-Xclang -fopenmp -I/opt/homebrew/include")
 			set(OpenMP_C_LIB_NAMES "libomp")
 			set(OpenMP_libomp_LIBRARY "omp")
 
 			set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
-			set(OpenMP_CXX_FLAGS "-Xclang -fopenmp -I/opt/homebrew/opt/libomp/include")
+			set(OpenMP_CXX_FLAGS "-Xclang -fopenmp -I/opt/homebrew/include")
 			set(OpenMP_CXX_LIB_NAMES "libomp")
 			set(OpenMP_libomp_LIBRARY "omp")
 		endif()
