--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,12 +110,12 @@ if (USE_OPENMP)
 		if (NOT OpenMP_CXX_FOUND)
 			message(WARNING "OpenMP detection can struggle with MacOS. This script will try to fix this.")
 			set(OpenMP_C "${CMAKE_C_COMPILER}")
-			set(OpenMP_C_FLAGS "-Xclang -fopenmp -I/opt/homebrew/include")
+			set(OpenMP_C_FLAGS "-Xclang -fopenmp")
 			set(OpenMP_C_LIB_NAMES "libomp")
 			set(OpenMP_libomp_LIBRARY "omp")
 
 			set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
-			set(OpenMP_CXX_FLAGS "-Xclang -fopenmp -I/opt/homebrew/include")
+			set(OpenMP_CXX_FLAGS "-Xclang -fopenmp")
 			set(OpenMP_CXX_LIB_NAMES "libomp")
 			set(OpenMP_libomp_LIBRARY "omp")
 		endif()
@@ -126,7 +126,17 @@ if (OpenMP_CXX_FOUND)
 	target_link_libraries(libeasea PUBLIC OpenMP::OpenMP_CXX)
 	target_link_libraries(libeasna PUBLIC OpenMP::OpenMP_CXX)
 	if (CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
-		target_include_directories(libeasea PUBLIC OpenMP_CXX_INCLUDE_DIR)
+		if (OpenMP_CXX_INCLUDE_DIR)
+			target_include_directories(libeasea PUBLIC OpenMP_CXX_INCLUDE_DIR)
+		else()
+			message(WARNING "Problems may occurs with omp.h, consider providing OpenMP flags manually or disabling OpenMP.")
+			find_path(OMP_DIR "omp.h" HINTS "/usr/local/Cellar/libomp/" HINTS "/opt/homebrew/" HINTS "/usr/local/Cellar/libomp/${OpenMP_VERSION}" PATH_SUFFIXES "${OpenMP_VERSION}")
+			message(STATUS "${OMP_DIR}")
+			if (OMP_DIR)
+				message(STATUS "omp.h found in ${OMP_DIR} !")
+				set(OpenMP_C_FLAGS "${OpenMP_C_FLAGS} -I${OMP_DIR}")
+				set(OpenMP_CXX_FLAGS "${OpenMP_CXX_FLAGS} -I${OMP_DIR}")
+			endif()
 	endif()
 else ()
   	# Disable warnings for all the unknown OpenMP pragmas.
