--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,7 +136,10 @@ if (OpenMP_CXX_FOUND)
 				message(STATUS "omp.h found in ${OMP_DIR} !")
 				set(OpenMP_C_FLAGS "${OpenMP_C_FLAGS} -I${OMP_DIR}")
 				set(OpenMP_CXX_FLAGS "${OpenMP_CXX_FLAGS} -I${OMP_DIR}")
+			else()
+				message(WARNING "omp.h not found anywhere... Build may fail. Please provide variables manually as in https://github.com/actions/runner-images/issues/5555#issuecomment-1133906879")
 			endif()
+		endif()
 	endif()
 else ()
   	# Disable warnings for all the unknown OpenMP pragmas.
