--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,7 +130,7 @@ if (OpenMP_CXX_FOUND)
 			target_include_directories(libeasea PUBLIC OpenMP_CXX_INCLUDE_DIR)
 		else()
 			message(WARNING "Problems may occurs with omp.h, consider providing OpenMP flags manually or disabling OpenMP.")
-			find_path(OMP_DIR "omp.h" HINTS "/usr/local/Cellar/libomp/" HINTS "/opt/homebrew/" HINTS "/usr/local/Cellar/libomp/${OpenMP_VERSION}" HINTS "/usr/local/Cellar/libomp/16.0.1/" PATH_SUFFIXES "${OpenMP_VERSION}")
+			find_path(OMP_DIR "omp.h" HINTS "/usr/local/Cellar/libomp/" HINTS "/opt/homebrew/" HINTS "/usr/local/Cellar/libomp/${OpenMP_VERSION}" HINTS "/usr/local/Cellar/libomp/16.0.1/include" PATH_SUFFIXES "${OpenMP_VERSION}")
 			message(STATUS "${OMP_DIR}")
 			if (OMP_DIR)
 				message(STATUS "omp.h found in ${OMP_DIR} !")
