--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,12 +130,14 @@ if (OpenMP_CXX_FOUND)
 			target_include_directories(libeasea PUBLIC OpenMP_CXX_INCLUDE_DIR)
 		else()
 			message(WARNING "Problems may occurs with omp.h, consider providing OpenMP flags manually or disabling OpenMP.")
-			find_path(OMP_DIR "omp.h" HINTS "/usr/local/Cellar/libomp/" HINTS "/opt/homebrew/" HINTS "/usr/local/Cellar/libomp/${OpenMP_VERSION}" HINTS "/usr/local/Cellar/libomp/16.0.1/include" PATH_SUFFIXES "${OpenMP_VERSION}")
-			message(STATUS "${OMP_DIR}")
+			find_path(OMP_DIR "omp.h" "/usr/local/Cellar/libomp/" "/opt/homebrew/" "/usr/local/Cellar/libomp/${OpenMP_VERSION}" "/usr/local/Cellar/libomp/16.0.1/include")
+			message(STATUS "${OMP_DIR} ${OpenMP_VERSION}")
 			if (OMP_DIR)
 				message(STATUS "omp.h found in ${OMP_DIR} !")
 				set(OpenMP_C_FLAGS "${OpenMP_C_FLAGS} -I${OMP_DIR}")
 				set(OpenMP_CXX_FLAGS "${OpenMP_CXX_FLAGS} -I${OMP_DIR}")
+				target_include_directories(libeasea PUBLIC ${OMP_DIR})
+				target_include_directories(libeasna PUBLIC ${OMP_DIR})
 			else()
 				message(WARNING "omp.h not found anywhere... Build may fail. Please provide variables manually as in https://github.com/actions/runner-images/issues/5555#issuecomment-1133906879")
 			endif()
