--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,16 +108,16 @@ if (USE_OPENMP)
 	if (CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
 		find_package(OpenMP)
 		if (NOT OpenMP_CXX_FOUND)
-			message(WARNING "OpenMP detection can struggle with MacOS. This script will try to fix this.")
+			message(WARNING "OpenMP detection can struggle on MacOS. This script will try to fix this.")
 			set(OpenMP_C "${CMAKE_C_COMPILER}")
 			set(OpenMP_C_FLAGS "-Xclang -fopenmp")
-			set(OpenMP_C_LIB_NAMES "libomp")
-			set(OpenMP_libomp_LIBRARY "omp")
+			#set(OpenMP_C_LIB_NAMES "libomp")
+			#set(OpenMP_libomp_LIBRARY "omp")
 
 			set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
 			set(OpenMP_CXX_FLAGS "-Xclang -fopenmp")
-			set(OpenMP_CXX_LIB_NAMES "libomp")
-			set(OpenMP_libomp_LIBRARY "omp")
+			#set(OpenMP_CXX_LIB_NAMES "libomp")
+			#set(OpenMP_libomp_LIBRARY "omp")
 		endif()
 	endif()
 	find_package(OpenMP REQUIRED)
@@ -129,7 +129,7 @@ if (OpenMP_CXX_FOUND)
 		if (OpenMP_CXX_INCLUDE_DIR)
 			target_include_directories(libeasea PUBLIC OpenMP_CXX_INCLUDE_DIR)
 		else()
-			message(WARNING "Problems may occurs with omp.h, consider providing OpenMP flags manually or disabling OpenMP.")
+			message(WARNING "Problems may occurs related to missing omp.h, consider providing OpenMP flags manually or disabling OpenMP.")
 			find_path(OMP_DIR "omp.h" "/usr/local/Cellar/libomp/" "/opt/homebrew/" "/usr/local/Cellar/libomp/${OpenMP_VERSION}" "/usr/local/Cellar/libomp/16.0.1/include")
 			message(STATUS "${OMP_DIR} ${OpenMP_VERSION}")
 			if (OMP_DIR)
