--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,12 +111,12 @@ if (USE_OPENMP)
 			message(WARNING "OpenMP detection can struggle on MacOS. This script will try to fix this.")
 			set(OpenMP_C "${CMAKE_C_COMPILER}")
 			set(OpenMP_C_FLAGS "-Xclang -fopenmp")
-			#set(OpenMP_C_LIB_NAMES "libomp")
+			set(OpenMP_C_LIB_NAMES "libomp")
 			#set(OpenMP_libomp_LIBRARY "omp")
 
 			set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
 			set(OpenMP_CXX_FLAGS "-Xclang -fopenmp")
-			#set(OpenMP_CXX_LIB_NAMES "libomp")
+			set(OpenMP_CXX_LIB_NAMES "libomp")
 			#set(OpenMP_libomp_LIBRARY "omp")
 		endif()
 	endif()
