Fix bugged CUDA version (11.5.119 is known to contain a bug...)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,13 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Installing dependencies
-        run: sudo apt install -y libboost-all-dev nvidia-cuda-toolkit
+        run: sudo apt install -y libboost-all-dev
+
+      - name: Installing CUDA
+        uses: Jimver/cuda-toolkit@v0.2.10
+        id: cuda-toolkit
+        with:
+          cuda: '12.1.0'
 
       - name: CMake configure
         id: cmake-configure
@@ -178,6 +184,12 @@ jobs:
 
       - name: Installing Boost 1.79
         run: choco install boost-msvc-14.3 --version 1.79.0
+
+      - name: Installing CUDA
+        uses: Jimver/cuda-toolkit@v0.2.10
+        id: cuda-toolkit
+        with:
+          cuda: '12.1.0'
 
       - name: CMake configure
         id: cmake-configure
