Major fixes and resolve compatibility issues (#48)
* Restored retro-compatibility with old examples (\User declarations in .cpp, ERROR, SIZE, etc.)
* Added a way to insert CMake code with '\User CMake' and 'CMAKE_TARGET'
* Modernized parsing to avoid memory leaks
* Fix multiple memory leaks in templates and libs
* Removed all OS based conditional compilation to improve cross-compatibility
* Restored retro-compatibility for mutation function (void -> int)
* Fix impossible compilation when OpenMP is not found
* Fix pPopulation not being updated
* Fix ASREA
* Fix UB if random(min, max) and min == max
* Removed 'using' from headers
* Fix memory leaks when parsing .prm files
* Fix logging to use standard C++ features instead of GCC ones
* Fix lots of warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.9) # 3.9: OpenMP improved support
 # Debug ONLY
 set(CMAKE_VERBOSE_MAKEFILE TRUE)
 
-PROJECT(EASENA VERSION 3.2.2)
+PROJECT(EASENA VERSION 3.2.0)
 #set(PROJECT_NAME "EASENA")
 
 message("-- PROJECT NAME: ${PROJECT_NAME}")
@@ -112,7 +112,7 @@ if (OpenMP_CXX_FOUND)
 	target_link_libraries(libeasna PUBLIC OpenMP::OpenMP_CXX)
 else ()
   	# Disable warnings for all the unknown OpenMP pragmas.
-  	target_compile_options(libeasna $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wno-unknown-pragmas>)
+	target_compile_options(libeasna PUBLIC $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wno-unknown-pragmas>)
 endif ()
 
 ## Boost (asio)
