--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,13 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Installing dependencies
-        run: sudo apt install -y libboost-all-dev nvidia-cuda-toolkit
+        run: sudo apt install -y libboost-all-dev
+
+      - name: Installing CUDA
+        uses: Jimver/cuda-toolkit@v0.2.10
+        id: cuda-toolkit
+        with:
+          cuda: '12.1.0'
 
       - name: CMake configure
         id: cmake-configure
@@ -112,13 +118,13 @@ jobs:
       - name: Installing dependencies
         shell: bash
         run: |
-          brew install bison libomp coreutils boost gnu-sed
+          brew install bison libomp coreutils boost gnu-sed cmake
           export PATH="$(brew --prefix bison)/bin:$PATH"
           export PATH="$(brew --prefix)/opt/gnu-sed/libexec/gnubin:$PATH"
 
       - name: CMake configure
         id: cmake-configure
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DUSE_OPENMP=OFF
         shell: bash
 
       - name: CMake build
@@ -178,6 +184,12 @@ jobs:
 
       - name: Installing Boost 1.79
         run: choco install boost-msvc-14.3 --version 1.79.0
+
+          #- name: Installing CUDA
+          #  uses: Jimver/cuda-toolkit@v0.2.10
+          #  id: cuda-toolkit
+          #  with:
+          #    cuda: '12.1.0'
 
       - name: CMake configure
         id: cmake-configure
