Fix compiling warning in Test when Clang is used

--- a/Test/xor_mnist/CMakeLists.txt
+++ b/Test/xor_mnist/CMakeLists.txt
@@ -13,7 +13,7 @@ endif(NOT MNIST_FOUND)
 INCLUDE_DIRECTORIES(${MNIST_INCLUDE_DIR})
 ADD_EXECUTABLE(easna_regression_test main.cpp)
 target_compile_options(easna_regression_test PUBLIC
-	$<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-pedantic -Wall -Wextra -Woverloaded-virtual -Wfloat-equal -Wwrite-strings -Wpointer-arith -Wcast-qual -Wcast-align -Wshadow -Wredundant-decls -Wdouble-promotion -Winit-self -Wswitch-default -Wlogical-op -std=c++11 -O3 -s>
+	$<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-pedantic -Wall -Wextra -Woverloaded-virtual -Wfloat-equal -Wwrite-strings -Wpointer-arith -Wcast-qual -Wcast-align -Wshadow -Wredundant-decls -Wdouble-promotion -Winit-self -Wswitch-default -std=c++11 -O3 $<$<NOT:$<CXX_COMPILER_ID:Clang>>:-s -Wlogical-op>>
 	)
 TARGET_COMPILE_FEATURES(easna_regression_test PRIVATE cxx_range_for)
 
