--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -183,7 +183,7 @@ jobs:
         shell: bash
 
       - name: Installing Boost 1.79
-        run: choco install boost-msvc-14.3 --version 1.79.0
+        run: choco install boost-msvc-14.3
 
           #- name: Installing CUDA
           #  uses: Jimver/cuda-toolkit@v0.2.10
